--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/technical_community?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/technical_community?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
     username: root
     password: 123456
 
