--- a/vue/package.json
+++ b/vue/package.json
@@ -11,8 +11,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
-    "vuex": "^4.1.0",
-    "axios": "^1.3.2"
+    "axios": "^1.3.2",
+    "element-plus": "^2.2.29"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
