--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
     url: jdbc:mysql://localhost:3306/technical_community?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
     username: root
     password: 123456
+  servlet:
+    multipart:
+      max-file-size: -1
+      max-request-size: -1
 
 
 mybatis-plus:
