--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,5 +14,5 @@ spring:
 
 
 mybatis-plus:
-  mapper-locations: classpath:mapping/*.xml
+  mapper-locations: classpath:/mapper/**/*.xml
   type-aliases-package: com.pzj.technicalcommunity.model
