--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   type-aliases-package: com.pzj.technicalcommunity.model
+
+data:
+  domain: http://localhost:8080
