--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-
+# local env files
 .DS_Store
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/src/web/dist
-/src/web/node_modules
+/web/dist
+/web/node_modules
+.env.local
+.env.*.local
 
 ### STS ###
 .apt_generated
@@ -16,10 +18,6 @@ target/
 .settings
 .springBeans
 .sts4-cache
-
-# local env files
-.env.local
-.env.*.local
 
 # Log files
 npm-debug.log*
