--- a/web/package.json
+++ b/web/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "vue",
-  "version": "0.1.0",
+  "name": "technicalcommunity",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "install": "npm install",
-    "serve": "npm run serve",
-    "build": "npm run build",
-    "lint": "npm run lint"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@achrinza/node-ipc": "^10.1.10",
     "@element-plus/icons": "^0.0.11",
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
